test: adicionar suite completa de testes unitários com JUnit 5 e Mockito
- Testes para camada de domínio (BookTest)
- Testes para camada de aplicação (Register/Update/DeleteBookUseCaseTest)
- Testes para camada de infraestrutura (InMemoryBookRepositoryTest)
- Correção da entidade Book com validações e equals/hashCode semanticamente corretos
- Organização por pacotes seguindo estrutura de produção