@@ -3,7 +3,8 @@ package com.alexsaldan.library.domain;
 import java.util.Objects;
 
 /**
- * Entidade de domínio imutável que representa um livro.
+ * Entidade de domínio que representa um livro.
+ * Sem dependências de framework (ADR-001, Clean Architecture).
  */
 public class Book {
 
@@ -11,29 +12,23 @@ public class Book {
     private final String title;
     private final String author;
 
-    // Construtor para novo livro (sem ID)
-    public Book(String title, String author) {
-        this(null, title, author);
-    }
-
-    // Construtor para livro existente (com ID)
     public Book(Long id, String title, String author) {
-        validate(id, title, author);
-        this.id = id;
-        this.title = title.trim();
-        this.author = author.trim();
-    }
-
-    private void validate(Long id, String title, String author) {
-        if (title == null || title.isBlank()) {
-            throw new IllegalArgumentException("Título é obrigatório");
+        // Validações obrigatórias
+        if (title == null || title.trim().isEmpty()) {
+            throw new IllegalArgumentException("Título não pode ser vazio");
         }
-        if (author == null || author.isBlank()) {
-            throw new IllegalArgumentException("Autor é obrigatório");
+        if (author == null || author.trim().isEmpty()) {
+            throw new IllegalArgumentException("Autor não pode ser vazio");
         }
+        
+        // Validação de ID: só valida se não for null (livros novos podem ter ID null)
         if (id != null && id <= 0) {
             throw new IllegalArgumentException("ID deve ser positivo");
         }
+        
+        this.id = id;
+        this.title = title.trim();
+        this.author = author.trim();
     }
 
     public Long getId() {
@@ -53,12 +48,22 @@ public class Book {
         if (this == o) return true;
         if (!(o instanceof Book)) return false;
         Book book = (Book) o;
-        return Objects.equals(title.toLowerCase(), book.title.toLowerCase()) &&
-               Objects.equals(author.toLowerCase(), book.author.toLowerCase());
+        
+        // Se ambos têm ID válido, comparar só pelo ID (identidade de entidade)
+        if (this.id != null && book.id != null) {
+            return Objects.equals(this.id, book.id);
+        }
+        
+        // Se um ou ambos não têm ID, comparar por título + autor (evitar duplicatas)
+        return Objects.equals(this.title.toLowerCase(), book.title.toLowerCase()) &&
+               Objects.equals(this.author.toLowerCase(), book.author.toLowerCase());
     }
 
     @Override
     public int hashCode() {
+        if (id != null) {
+            return Objects.hash(id);
+        }
         return Objects.hash(title.toLowerCase(), author.toLowerCase());
     }
 
